--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
         body {
             font-size: 10px;
         }
+
+        .fix-footer {
+            position: absolute;
+            width: 100%;
+            bottom: 0;
+            overflow: hidden;
+        }
+        .footer {
+            background-color: white;
+            padding: 3rem 1.5rem 2rem;
+        }
     </style>
 </head>
 
@@ -33,6 +44,16 @@
 
         </tbody>
     </table>
+    <footer class="footer fix-footer">
+        <div class="content has-text-right">
+            <p>
+                <strong>nplist</strong> by <a href="https://www.addictionsoftware.com/" target="_blank" rel="noopener noreferrer">xtda</a>.
+            </p>
+            <a href="https://www.github.com/xtda/nplist" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-github fa-2x""></i>
+            </a>
+        </div>
+    </footer>
     <script src="site.min.js"></script>
 </body>
 
