fixed transparency on footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             overflow: hidden;
         }
         .footer {
-            background-color: white;
+            background-color: #fff0;
             padding: 3rem 1.5rem 2rem;
         }
     </style>
