--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </a>
         </div>
     </footer>
-    <script src="site.min.js"></script>
+    <script src="site.js"></script>
 </body>
 
 </html>
