added data pulled from nopixel including username/twitch name

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
         .footer {
             background-color: #fff0;
-            padding: 3rem 1.5rem 2rem;
+            padding: 1rem 1.5rem 1rem;
         }
     </style>
 </head>
@@ -34,9 +34,11 @@
             <tr>
                 <th>#</th>
                 <th>ID</th>
-                <th>Name</th>
+                <th>Name(Steam)</th>
+                <th>Name(NoPixel)</th>
                 <th>Steam ID</th>
                 <th>Steam64 ID</th>
+                <th>Twitch</th>
                 <th>Ping</th>
             </tr>
         </thead>
