--- a/index.html
+++ b/index.html
@@ -9,53 +9,43 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" integrity="sha256-2pUeJf+y0ltRPSbKOeJh09ipQFYxUdct5nTY6GAXswA="
         crossorigin="anonymous" />
-    <style>
-        body {
-            font-size: 10px;
-        }
-
-        .fix-footer {
-            position: absolute;
-            width: 100%;
-            bottom: 0;
-            overflow: hidden;
-        }
-        .footer {
-            background-color: #fff0;
-            padding: 1rem 1.5rem 1rem;
-        }
-    </style>
 </head>
 
 <body>
-    <h3 class="is-size-3" id="title">NoPixel Player list: </h3>
-    <table class="table is-bordered" id="playerlist">
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>ID</th>
-                <th>Name(Steam)</th>
-                <th>Name(NoPixel)</th>
-                <th>Steam ID</th>
-                <th>Steam64 ID</th>
-                <th>Twitch</th>
-                <th>Ping</th>
-            </tr>
-        </thead>
-        <tbody>
+    <div class="column is-full">
+        <h3 class="is-size-3" id="title">NoPixel Player list: </h3>
 
-        </tbody>
-    </table>
-    <footer class="footer fix-footer">
+        <table class="table is-bordered" id="playerlist">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>ID</th>
+                    <th>Name(Steam)</th>
+                    <th>Name(NoPixel)</th>
+                    <th>Steam ID</th>
+                    <th>Steam64 ID</th>
+                    <th>Twitch</th>
+                    <th>Ping</th>
+                </tr>
+            </thead>
+            <tbody>
+
+            </tbody>
+        </table>
+    </div>
+    <footer class="footer">
         <div class="content has-text-right">
+            <p> <a href="#" id="darklink">Dark</a>/<a href="#" id="lightlink">Light</a><br/></p>
             <p>
-                <strong>nplist</strong> by <a href="https://www.addictionsoftware.com/" target="_blank" rel="noopener noreferrer">xtda</a>.
+                <strong>nplist</strong> by <a href="https://www.addictionsoftware.com/" target="_blank"
+                    rel="noopener noreferrer">xtda</a>.
             </p>
             <a href="https://www.github.com/xtda/nplist" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-github fa-2x""></i>
             </a>
         </div>
     </footer>
+
     <script src="site.min.js"></script>
 </body>
 
