added discord id to list

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                     <th>Steam ID</th>
                     <th>Steam64 ID</th>
                     <th>Twitch</th>
+                    <th>Discord</th>
                     <th>Ping</th>
                 </tr>
             </thead>
             <tbody>
-
             </tbody>
         </table>
     </div>
